fix alignment on scrolling areas on touch devices (flickity not enabled)

--- a/assets/sass/objects/_flickity.scss
+++ b/assets/sass/objects/_flickity.scss
@@ -76,7 +76,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  padding: 0 $base-px*1.5 0 0;
+  padding: 0 $base-px*1.5 0 8px;
   font-size: 0; // Needed for white space when flickity disabled
 
   &::-webkit-scrollbar {
